# whisperIME

./: .gitignore  PUBLISHING.md  README.md  local.properties.example
.github/workflows/: build.yml  release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/parakeet/: parakeet_vocab.tsv
app/src/main/cpp/: CMakeLists.txt  rnnoise_jni.cpp  whisper_jni.cpp
app/src/main/java/com/whispertflite/: AsrEnginePreferences.kt  DownloadActivity.kt  ImeTextEditHelper.java  MainActivity.java  RecordingTimings.java  VoiceCommandPreferences.java  VoiceInputUndoStack.java  WhisperInputMethodService.java  WhisperRecognitionService.java  WhisperRecognitionServiceSettingsActivity.java  WhisperRecognizeActivity.java
app/src/main/java/com/whispertflite/asr/: AudioCaptureEffects.kt  AudioCapturePreferences.kt  AudioCaptureUi.kt  LiveTranscribePreferences.kt  OfflineAsrEngines.kt  RecordBuffer.java  Recorder.java  RnnoiseDenoiser.kt  RnnoiseJni.kt  SpeechRecognizerBundles.kt  Whisper.java  WhisperGgmlModels.kt  WhisperLivePreviewLoop.java  WhisperModelSelection.kt  WhisperModelUi.java
app/src/main/java/com/whispertflite/engine/: WhisperEngine.java  WhisperEngineCpp.java  WhisperEngineJava.java
app/src/main/java/com/whispertflite/moonshine/: MoonshineConstants.kt  MoonshineDownloader.kt  MoonshineHoldRecorder.kt  MoonshineModelFiles.kt  MoonshinePocActivity.kt  MoonshinePreferences.kt
app/src/main/java/com/whispertflite/parakeet/: ParakeetConstants.kt  ParakeetDownloader.kt  ParakeetEnginePool.kt  ParakeetMelExtractor.kt  ParakeetModelFiles.kt  ParakeetPocActivity.kt  ParakeetPreferences.kt  ParakeetStreamingEngine.kt  ParakeetStreamingRecorder.kt  ParakeetTokenizer.kt
app/src/main/java/com/whispertflite/sherpa/: SherpaDecodeVariant.kt  SherpaDownloader.kt  SherpaModelCatalog.kt  SherpaModelFiles.kt  SherpaOnnxConfig.kt  SherpaOnnxNativeBootstrap.kt  SherpaOnnxSpikeActivity.kt  SherpaOnnxSpikePaths.kt  SherpaPreferences.kt  SherpaPunctuationCatalog.kt  SherpaPunctuationDownloader.kt  SherpaPunctuationEngine.kt  SherpaPunctuationModelFiles.kt  SherpaPunctuationPostProcessor.kt  SherpaStreamingRecorder.kt
app/src/main/java/com/whispertflite/utils/: Downloader.java  HttpFileDownloader.kt  ThemeUtils.java  WhisperUtil.java
app/src/main/res/drawable/: ic_delete_word_48dp.xml  ic_undo_48dp.xml
app/src/main/res/layout/: activity_download.xml  activity_main.xml  activity_parakeet_poc.xml  activity_recognition_service_settings.xml  activity_sherpa_spike.xml  voice_service.xml
app/src/main/res/values/: arrays.xml  strings.xml
docs/: asr-session-architecture.md  offline-asr-research.md  parakeet-onnxruntime.md  wer-benchmark.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 38.txt
scripts/: wer_benchmark.py
